feat: compress model test

--- a/Estudos/MediaPipe/python-samples/.gitignore
+++ b/Estudos/MediaPipe/python-samples/.gitignore
@@ -127,11 +127,14 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Models
+*.tflite
+
 # Environments
 .env
 .venv
-.venv_mediapipe
-venv_mediapipe/
+.venv_mediapipe_
+venv_mediapipe_/
 env/
 venv/
 ENV/
