--- a/Estudos/MediaPipe/python-samples/requirements.txt
+++ b/Estudos/MediaPipe/python-samples/requirements.txt
@@ -1,17 +1,39 @@
 absl-py==2.1.0
 attrs==24.3.0
+certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
 contourpy==1.3.1
 cycler==0.12.1
+filelock==3.16.1
 flatbuffers==24.12.23
 fonttools==4.55.3
+fsspec==2024.12.0
+huggingface-hub==0.27.1
+idna==3.10
 jax==0.4.38
 jaxlib==0.4.38
+Jinja2==3.1.5
 kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.0
 mediapipe==0.10.20
 ml_dtypes==0.5.1
+mpmath==1.3.0
+networkx==3.4.2
 numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 opencv-contrib-python==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.2
@@ -20,7 +42,15 @@ protobuf==4.25.5
 pycparser==2.22
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+requests==2.32.3
 scipy==1.15.1
 sentencepiece==0.2.0
 six==1.17.0
 sounddevice==0.5.1
+sympy==1.13.1
+torch==2.5.1
+tqdm==4.67.1
+triton==3.1.0
+typing_extensions==4.12.2
+urllib3==2.3.0
